# snowboardfree

./: CMakeLists.txt  README.md
include/: entity.h  game.h  obstacles.h  piano.h  player.h  sign.h  sprite_data.h  yeti.h
resources/data/: player.data  player_spritesheet.data  ramp.data  sign.data  tree.data  yeti.data
scripts/: sprite_to_data.py
source/: game.cpp  main.cpp  piano.cpp  sign.cpp
source/entity/: animated_entity.cpp  entity.cpp  player.cpp  ramp.cpp  static_entity.cpp  tree.cpp  yeti.cpp
